ajout nom de classes compréhensibles, correction faute d'orthographe

--- a/index.html
+++ b/index.html
@@ -10,16 +10,11 @@
 	<link href="main.css" rel="stylesheet">
 </head>
 <body>
-
-	<!--notes show dispositon for devices > 768px. Original mockup of the CV.-->
-
-	<div id="main_container">
-		<!-- contains 2 elements on flex/ column -->
-		<div id="container_one">
-			<!-- contains 2 elements on flex / row : #photo and header-->
+	<div id="main_container"> <!-- contains 2 elements: #container_one and #container_two -->
+		<div id="container_one"> <!-- contains 2 elements : #photo and header -->
 			<div id="photo">
 				<div id="cube_effet_photo">
-					<a href="images/myface.svg"><img alt="visage raphael chauvat svg" src="images/myface.svg" title="un esprit sain dans un corps sain... presque"></a>
+					<a href="images/myface.svg"><img alt="visage raphael chauvat svg" src="images/myface.svg" title="un esprit sain dans un corps sain... ou presque"></a>
 				</div>
 			</div>
 			<header>
@@ -28,8 +23,8 @@
 				<div class="thread"></div>
 			</header>
 		</div>
-		<div id="container_two"> <!-- contains 2 elements on flex row -->
-			<div id="container_address_aside_footer"> <!-- contains 3 elements on flex / column -->
+		<div id="container_two"> <!-- contains 2 elements -->
+			<div id="container_address_aside_footer"> <!-- contains 3 elements -->
 				<address>
 					<p class="titles">CONTACT</p>
 					<ul>
@@ -52,7 +47,7 @@
 				<aside>
 					<p class="titles">A PROPOS DE MOI</p>
 					<div id="text_apropos">
-						<p>Reconverti dans l'informatique après un parcours atypique et enrichissant, j'ai décidé de m'investir dans ce qui m'a toujours attiré, et c'est ainsi que je suis devenu spécialiste HTML et CSS.  Je réalise vos projets de développement web dans le souci de vous apporter le service qui répond le plus exactement à vos besoins.
+						<p>Reconverti dans l'informatique après un parcours atypique et enrichissant, j'ai décidé de m'investir dans un domaine qui m'a toujours attiré, c'est ainsi que je suis devenu spécialiste HTML et CSS.  Je réalise vos projets de développement web dans le souci de vous apporter le service qui répond le plus exactement à vos besoins.
 						<br />
 						Mon seul objectif: votre satisfaction.</p>
 					</div>
@@ -72,8 +67,8 @@
 					</div>
 				</footer>
 			</div>
-			<main>	<!-- contains 3 elements on flex / column :  3 sections -->
-				<section id="forma">
+			<main>	<!-- contains 3 elements:  3 sections: #formation, #experiences and #recommandations -->
+				<section id="formation">
 					<div class="section_title">
 						<i class="fas fa-user-graduate"></i>
 						<p>FORMATION</p>
@@ -83,13 +78,13 @@
 						<div class="section_content_p_left">
 							<i class="far fa-dot-circle"></i>
 							<p>2020-2021<br>
-							Formation en ligne.</p>
+							Formation en ligne</p>
 						</div>
 						<div class="section_content_p_right">
 							<h4>Openclassrooms</h4>
 							<h5>Développeur Web</h5>
 						
-							<p>Acquisition de compétences clés par la réalisation de projets: site web, site de e-commerce, réseau social d'entreprise, API sécurisée. Certification Professionnelle enregistrée au RNCP (Fiche 3273). </p>
+							<p>Acquisition de compétences clés par la réalisation de projets: site web, site de e-commerce, réseau social d'entreprise, API sécurisée. Certification Professionnelle obtenue enregistrée au RNCP (Fiche 3273). </p>
 						</div>
 					</div>
 					<div class="section_content_p">
@@ -106,7 +101,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="exper">
+				<section id="experiences">
 					<div class="section_title">
 						<i class="fas fa-suitcase"></i>	
 						<p >EXPERIENCE PROFESSIONNELLE</p>
@@ -128,11 +123,11 @@
 						<div class="section_content_p_left">
 							<i class="fas fa-circle"></i>
 							<p> 1999 -  2013<br>
-							Maine-et_loire</p>
+							Maine-et-loire</p>
 						</div>
 						<div class="section_content_p_right">
 							<h4>Loste</h4>
-							<h5>Cuisiner</h5>
+							<h5>Cuisinier</h5>
 							<p>Fabrication de garnitures à destination de produits de qualité traiteur.</p>
 						</div>
 					</div>
@@ -149,7 +144,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="recom">
+				<section id="recommandations">
 					<div class="section_title">
 						<i class="fas fa-thumbs-up"></i>
 						<p>RECOMMANDATIONS</p>
