ajout de sens sémantique (h3) et modification des noms de classe pour plus de clarté

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 		<div id="container_one"> <!-- contains 2 elements : #photo and header -->
 			<div id="photo">
 				<div id="cube_effet_photo">
-					<a href="images/myface.svg"><img alt="visage raphael chauvat svg" src="images/myface.svg" title="un esprit sain dans un corps sain... ou presque"></a>
+					<a href="images/myface.svg"><img alt="visage raphael chauvat svg" src="images/myface.svg" title="Raphael Chauvat"></a>
 				</div>
 			</div>
 			<header>
 				<h1><span>RAPHAEL</span> CHAUVAT</h1>
 				<h2>Développeur web freelance</h2>
-				<div class="thread"></div>
+				<div class="line"></div>
 			</header>
 		</div>
-		<div id="container_two"> <!-- contains 2 elements -->
-			<div id="container_address_aside_footer"> <!-- contains 3 elements -->
+		<div id="container_two"> <!-- contains 2 elements: container_address_aside_footer and main -->
+			<div id="container_address_aside_footer"> <!-- contains 3 elements : address, aside and footer -->
 				<address>
 					<p class="titles">CONTACT</p>
 					<ul>
@@ -46,7 +46,7 @@
 				</address>
 				<aside>
 					<p class="titles">A PROPOS DE MOI</p>
-					<div id="text_apropos">
+					<div id="text_a_propos">
 						<p>Reconverti dans l'informatique après un parcours atypique et enrichissant, j'ai décidé de m'investir dans un domaine qui m'a toujours attiré, c'est ainsi que je suis devenu spécialiste HTML et CSS.  Je réalise vos projets de développement web dans le souci de vous apporter le service qui répond le plus exactement à vos besoins.
 						<br />
 						Mon seul objectif: votre satisfaction.</p>
@@ -54,7 +54,7 @@
 				</aside>
 				<footer>
 					<p class="titles">LOISIRS</p>
-					<div id="under_footer">
+					<div id="footer_content">
 						<div class="un_rond">
 							<i class="fas fa-plane-departure"></i>
 						</div>
@@ -71,29 +71,29 @@
 				<section id="formation">
 					<div class="section_title">
 						<i class="fas fa-user-graduate"></i>
-						<p>FORMATION</p>
+						<h3>FORMATION</h3>
 					</div>
-					<div class="section_thread" id="reco_thread"></div>
-					<div class="section_content_p">
-						<div class="section_content_p_left">
+					<div class="section_line"></div>
+					<div class="section_content">
+						<div class="section_content_paragraph_left">
 							<i class="far fa-dot-circle"></i>
 							<p>2020-2021<br>
 							Formation en ligne</p>
 						</div>
-						<div class="section_content_p_right">
+						<div class="section_content_paragraph_right">
 							<h4>Openclassrooms</h4>
 							<h5>Développeur Web</h5>
 						
-							<p>Acquisition de compétences clés par la réalisation de projets: site web, site de e-commerce, réseau social d'entreprise, API sécurisée. Certification Professionnelle obtenue enregistrée au RNCP (Fiche 3273). </p>
+							<p>Acquisition de compétences clés par la réalisation de projets: site web, site de e-commerce, réseau social d'entreprise, API sécurisée...)</p>
 						</div>
 					</div>
-					<div class="section_content_p">
-						<div class="section_content_p_left">
+					<div class="section_content">
+						<div class="section_content_paragraph_left">
 							<i class="fas fa-circle"></i>
 							<p>2019<br>
 							Formation en ligne</p>
 						</div>
-						<div class="section_content_p_right">
+						<div class="section_content_paragraph_right">
 							<h4>FreeCodeCamp</h4>
 							
 							<h5>Etudiant</h5>
@@ -104,40 +104,40 @@
 				<section id="experiences">
 					<div class="section_title">
 						<i class="fas fa-suitcase"></i>	
-						<p >EXPERIENCE PROFESSIONNELLE</p>
+						<h3 >EXPERIENCE PROFESSIONNELLE</h3>
 					</div>
-					<div class="section_thread"></div>
-					<div class="section_content_p">
-						<div class="section_content_p_left">
+					<div class="section_line"></div>
+					<div class="section_content">
+						<div class="section_content_paragraph_left">
 							<i class="far fa-dot-circle"></i>
 							<p> 2014 - 2020<br>
 							Belfort et Angers</p>
 						</div>
-						<div class="section_content_p_right">
+						<div class="section_content_paragraph_right">
 							<h4>Apasad</h4>
 							<h5>Accompagnant Educatif et Social</h5>
 							<p>Accompagnement des personnes en situation de handicap dans tous les aspects de la vie quotidienne.</p>
 						</div>
 					</div>
-					<div class="section_content_p">
-						<div class="section_content_p_left">
+					<div class="section_content">
+						<div class="section_content_paragraph_left">
 							<i class="fas fa-circle"></i>
 							<p> 1999 -  2013<br>
 							Maine-et-loire</p>
 						</div>
-						<div class="section_content_p_right">
+						<div class="section_content_paragraph_right">
 							<h4>Loste</h4>
 							<h5>Cuisinier</h5>
 							<p>Fabrication de garnitures à destination de produits de qualité traiteur.</p>
 						</div>
 					</div>
-					<div class="section_content_p">
-						<div class="section_content_p_left">
+					<div class="section_content">
+						<div class="section_content_paragraph_left">
 							<i class="fas fa-circle"></i>
 							<p>1997 - 1999<br>
 							Fontainebleau</p>
 						</div>
-						<div class="section_content_p_right">
+						<div class="section_content_paragraph_right">
 							<h4>Ecole Interarmées des Sports</h4>
 							<h5>Secrétaire Médicale</h5>
 							<p>Accueil physique et téléphonique. Gestion informatique des dossiers patients de l'infirmerie. </p>
@@ -147,11 +147,11 @@
 				<section id="recommandations">
 					<div class="section_title">
 						<i class="fas fa-thumbs-up"></i>
-						<p>RECOMMANDATIONS</p>
+						<h3>RECOMMANDATIONS</h3>
 					</div>
-					<div class="section_thread"></div>
-					<div class="section_sub">
-						<div class="section_nested">
+					<div class="section_line"></div>
+					<div class="section_content_recommandations">
+						<div class="section_content_paragraph_recommandations">
 							<h5>Col. Jouanneau Michel</h5>
 							<ul>
 								<li>Médecin Chef Infirmerie EIS</li>
@@ -159,7 +159,7 @@
 								<li>email: pasdemail@eis.fr</li>
 							</ul>
 						</div>
-						<div class="section_nested">
+						<div class="section_content_paragraph_recommandations">
 							<h5>Mme Myriam</h5>
 							<ul>
 								<li>Responsable de Secteur, Apasad.</li>
